client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  labels:
    run: client
  namespace: demo
spec:
  containers:
  - name: busybox
    image: busybox:1.34.0
    args:
    - sleep
    - "1000"
