deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deployment
  namespace: demo
  labels: 
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: fousmane/nginx-repo:v1.0
        resources:
          requests:
            cpu: 250m
            memory: "65M"
          limits:
            cpu: 500m
            memory: "130M"
        ports:
        - containerPort: 80
