mysql-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-locked
  namespace: demo
spec:
  containers:
  - name: mysql
    image: mysql:8
    resources:
      requests:
        cpu: 200m
        memory: "300M"
      limits:
        cpu: 500m
        memory: "600M"
