pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: demo
spec:
  containers:
  - name: nginx
    image: fousmane/nginx-repo:v1.0
    volumeMounts:
      - name: dc-heroes
        mountPath: /heroes
    resources:
      requests:
        cpu: 250m
        memory: "65M"
      limits:
        cpu: 500m
        memory: "130M"
    ports:
    - containerPort: 80
  volumes:
  - name: dc-heroes
    configMap: 
      name: dem-heroes
